syntax = "proto3";
option csharp_namespace = "PbxApiControl";
package ivr;
import "google/protobuf/empty.proto";

service IvrPbxService {

  rpc GetIvrList(google.protobuf.Empty) returns (IvrListReply);
  
}

message IvrListReply {
  // Список номеров групп вызовов.
  repeated IvrListInfo ivrs = 1;
}

//Информации о группе вызова
message IvrListInfo {
  string name = 1;
  string number = 2;
}
